--- a/paginas/introducao.html
+++ b/paginas/introducao.html
@@ -36,7 +36,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A natureza sem tipos da linguagem B apresentava várias desvantagens à medida que máquinas com suporte a processamento
 <a href="https://pt.wikipedia.org/wiki/ASCII" target="_blank">ASCII</a> tornavam-se comuns. Por esse motivo, Thompson e Ritchie começaram a desenvolver uma versão expandida da linguagem que suportava novos tipos internos (além da word) e aqueles definidos pelos usuários (as <a href="https://en.wikipedia.org/wiki/Struct_(C_programming_language)" target="_blank">estruturas</a>). Essa nova versão veio a se tornar a linguagem NB (New B) e posteriormente a linguagem C.</p>
 
-<img class="img-css" src="https://davikwiecien.github.io/imagens/pdp-11.png" alt="PDP-11" width="420px" height="330px"><br>
+<img class="img-css" src="https://github.com/davikwiecien/tutorial-c/tree/main/imagens/pdp-11.png" alt="PDP-11" width="420px" height="330px"><br>
 <font size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computador PDP-11, onde ocorreu a primeira implementação do Unix compilado em linguagem C</font>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Devido à  fácil portabilidade provida pela linguagem C e pelo próprio Unix, essas duas tecnologias se popularizaram muito na década de 1970, ao passo que muitas universidades e organizações <b>adotaram a linguagem e passaram a criar suas próprias versões</b>. Embora a linguagem C não fosse originalmente projetada tendo a portabilidade como uma meta principal, ela teve sucesso expressando programas, incluindo igualmente sistemas operacionais, em máquinas que variam de pequenos computadores pessoais até poderosos supercomputadores. Trata-se de uma linguagem <b>suficientemente abstrata</b> dos detalhes do <a href="https://pt.wikipedia.org/wiki/Hardware" target="_blank">hardware</a> subjacente de modo que a <b>portabilidade</b> dos programas pode ser alcançada.<br></p>
@@ -46,7 +46,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;O livro <a href="https://pt.wikipedia.org/wiki/The_C_Programming_Language" target="_blank">"A Linguagem de Programação C"</a>, publicado em 1978 e escrito por Dennis Ritchie e <a href="https://pt.wikipedia.org/wiki/Brian_Kernighan" target="_blank">Brian Kernighan</a>, sendo comumente referido como C K&R (Kernighan and Ritchie), serviu como uma <b>primeira referência informal</b> da linguagem até um padrão formal ser adotado mais de dez anos depois.<br></p>
 
 <center>
-<img class="img-css" src="https://davikwiecien.github.io/imagens/K-R.png" alt="Livro K&R" width="400px" height="520px">
+<img class="img-css" src="https://github.com/davikwiecien/tutorial-c/tree/main/imagens/K-R.png" alt="Livro K&R" width="400px" height="520px">
 </center>
 
 <center>
