--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="logo">
-  <img src="https://davikwiecien.github.io/imagens/c-logo.png" alt="logo da linguagem-c"> 
+  <img src="https://davikwiecien.github.io/tutorial-c/imagens/c-logo.png" alt="logo da linguagem-c"> 
 </div>
 
 </body>
