--- a/paginas/compilacao-interpretacao.html
+++ b/paginas/compilacao-interpretacao.html
@@ -50,7 +50,7 @@
         </ul>
     </td>
     <td>
-        <img src="https://github.com/davikwiecien/tutorial-c/tree/main/imagens/compilacao.png" alt="Processo de compilação">
+        <img src="https://davikwiecien.github.io/tutorial-c/imagens/compilacao.png" alt="Processo de compilação">
     </td>
   </tr>
 </table>
@@ -72,7 +72,7 @@
         </ul>
     </td>
     <td>
-        <img src="https://github.com/davikwiecien/tutorial-c/tree/main/imagens/interpretacao.png" alt="Processo de interpretação">
+        <img src="https://davikwiecien.github.io/tutorial-c/imagens/interpretacao.png" alt="Processo de interpretação">
     </td>
   </tr>
 </table>
