--- a/paginas/funcao-main.html
+++ b/paginas/funcao-main.html
@@ -92,17 +92,17 @@
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Uma vez criado o código fonte, podemos compilá-lo para gerar um executável que irá representar aquele código-fonte como um programa de computador em linguagem de máquina. Antes, precisamos salvar o código-fonte como um arquivo com extensão <b>.c</b> (de linguagem C), por exemplo, podemos salvar como <b>hello_world.c</b>. Para compilar, abriremos o prompt do Windows ou o terminal do Linux e entraremos no diretório onde o código-fonte foi salvo com o comando <b>cd</b>:</p>
 
-<img class="img-css" src="https://davikwiecien.github.io/imagens/hello-1.png" alt="1ª imagem" width="420px" height="280px">
+<img class="img-css" src="https://davikwiecien.github.io/tutorial-c/imagens/hello-1.png" alt="1ª imagem" width="420px" height="280px">
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;No diretório, compilaremos o código-fonte usando o GCC com comando abaixo:</p>
 
-<img class="img-css" src="https://davikwiecien.github.io/imagens/hello-2.png" alt="2ª imagem" width="420px" height="280px"><br><br>
+<img class="img-css" src="https://davikwiecien.github.io/tutorial-c/imagens/hello-2.png" alt="2ª imagem" width="420px" height="280px"><br><br>
 
 <font size="2">Obs.: <b>-o</b> indica como será chamado o <b>output</b> (saída compilada) do programa hello_world.c: <b>hello_world</b>.</font>
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Se não aparecer nenhuma mensagem (por exemplo, um aviso de erro de sintaxe) significa que o programa foi compilado corretamente. Para executá-lo, basta chamar o executável gerando com o comando abaixo: </p>
 
-<img class="img-css" src="https://davikwiecien.github.io/imagens/hello-3.png" alt="3ª imagem" width="420px" height="280px"><br><br>
+<img class="img-css" src="https://davikwiecien.github.io/tutorial-c/imagens/hello-3.png" alt="3ª imagem" width="420px" height="280px"><br><br>
 
 <font size="2">Obs.: Ao gerar um executável, não é preciso especificar a extensão <b>.exe</b> em seu nome, pois o próprio compilador (ou o linker) irá chamá-lo assim.</font>
 
